Fix some SpotBugs issues
JIRA: TRNSPRTPCE-198
Signed-off-by: guillaume.lambert <guillaume.lambert@orange.com>
Change-Id: I14e7ef94a94036af7e5fb2725f9116c52dc23476